--- a/.github/workflows/arc.yaml
+++ b/.github/workflows/arc.yaml
@@ -4,7 +4,36 @@ on:
     workflow_dispatch:
 
 jobs:
-    hello-from-exo-arc:
+    create-dockerfile:
         runs-on: exo-arc-runner
         steps:
-            - run: echo "🎉 This job uses runner scale set runners!"
+            - name: Create Dockerfile
+              run: |
+                  cat <<EOF > Dockerfile
+                    FROM ubuntu:latest
+                    RUN apt-get update && apt-get install -y python3
+                    ENTRYPOINT ["python3"]
+
+    docker-build:
+        needs: create-dockerfile
+        runs-on: exo-arc-runner
+        permissions:
+            contents: read
+            packages: write
+            id-token: write
+        steps:
+            - name: Login to Docker Hub
+              uses: docker/login-action@v3
+              with:
+                  registry: ghcr.io
+                  username: ${{ github.actor }}
+                  password: ${{ secrets.GITHUB_TOKEN }}
+
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
+
+            - name: Build and push
+              uses: docker/build-push-action@v6
+              with:
+                  push: true
+                  context: .
