--- a/.github/workflows/arc.yaml
+++ b/.github/workflows/arc.yaml
@@ -4,25 +4,17 @@ on:
     workflow_dispatch:
 
 jobs:
-    create-dockerfile:
-        runs-on: exo-arc-runner
-        steps:
-            - name: Create Dockerfile
-              run: |
-                  cat <<EOF > Dockerfile
-                    FROM ubuntu:latest
-                    RUN apt-get update && apt-get install -y python3
-                    ENTRYPOINT ["python3"]
-
     docker-build:
-        needs: create-dockerfile
         runs-on: exo-arc-runner
         permissions:
             contents: read
             packages: write
             id-token: write
         steps:
-            - name: Login to Docker Hub
+            - name: Checkout repository
+              uses: actions/checkout@v4
+
+            - name: Login to ghcr.io
               uses: docker/login-action@v3
               with:
                   registry: ghcr.io
@@ -35,5 +27,7 @@ jobs:
             - name: Build and push
               uses: docker/build-push-action@v6
               with:
-                  push: true
                   context: .
+                  file: Dockerfile.test
+                  tags: ghcr.io/${{ github.repository }}:latest
+                  push: true
